# 9sako6.github.io

./: .env.example  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .firebaserc  .gitignore  .imgbotconfig  .prettierignore  README.md  Rakefile  codegen.yml  firebase.json  firestore.rules  next.config.js  nuxt.config.js  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  site.config.json  tailwind.config.js  tsconfig.json  vitest.config.ts  vue.config.js
.firebase/: hosting.ZGlzdA.cache
.scaffdog/: component.md
.storybook/: main.js  nextMdxMock.js  preview.js
__tests__/: index.test.tsx
admin-api/: .dockerignore  Dockerfile.production  README.md  admin_api.opam  dune-project
admin-api/lib/: admin_api.ml  dune
admin-api/lib/handler/: dune  health.ml
admin-api/test/: dune
admin-web/: .dockerignore  Dockerfile.production  package-lock.json  package.json
app/: head.tsx  layout.tsx  page.tsx
articles/: abc021_d.md  abc044_d.md  abc113_d.md  bash_de_ABC153A_D_and_ABC154A_C.md  define_int_long_long.md  how_to_cook_delicious_tacos.md  my-utility-types.md  scraping-yahoo-calendar-with-deno-puppeteer.md
blog-web/: .eslintrc.json  .gitignore  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
components/: A8netFoot.vue  Art.vue  BackArrow.vue  Card.vue  ColorModePicker.vue  CommentForm.vue  ContactForm.vue  DarkModeToggle.vue  Footer.vue  Header.vue  Navi.vue  PageTitle.vue  Pagenation.vue  Pagination.vue  (+7 more)
(+957 files in other folders)
