(lang dune 3.6)

(name admin_api)

(generate_opam_files true)

(source
 (github 9sako6/9sako6.github.io))

(authors "9sako6")

(maintainers "9sako6")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name admin_api)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune dream)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
